--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="col-lg-6 order-2 order-lg-0 banner--content align-self-center">
               <div class="banner--content--left">
                 <h4 class="wow bounceInUp">Hello, I’m Patrick Luan</h4>
-                <h2 class="wow bounceInUp">Full Stack & AI <span>Developer.</span></h2>
+                <h2 class="wow bounceInUp">Senior Full Stack & AI <span>Developer.</span></h2>
                 <p>A passionate Node.js & Python based in the Brazil.</p>
                 <div class="siteLink_bar">
                   <a aria-label="Github" class="siteLink" href="https://github.com/github.com/appleseed423">
@@ -227,7 +227,7 @@
                 </div>
                 <div id="c_summary">
                   <h5>A story of hardwork and perseverance. </h5>
-                  <p>Hi! I'm Patrick Luan, experienced Full Stack Developer with 7 years in designing, developing, and integrating AI-powered applications, cloud
+                  <p>Hi! I'm Patrick Luan, experienced Senior Full Stack Developer with 7 years in designing, developing, and integrating AI-powered applications, cloud
                     infrastructure, and scalable web solutions. Successfully optimized AI retrieval systems, increasing efficiency by 40% and cutting
                     deployment cycles by 60%. Skilled in full-stack development, AI model orchestration, and cloud automation, with experience
                     building and maintaining applications
@@ -238,7 +238,7 @@
                   <div style="display: flex; flex-direction: column; padding: 5px;">
                     <div>
                       <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Chili Piper</b> - New York, United States</p>
-                      <p><spin style="color: #222;">Full Stack Developer</spin>(Remote) | Apr 2022 - Oct 2024</p>
+                      <p><spin style="color: #222;">Senior Full Stack Developer</spin>(Remote) | Apr 2022 - Oct 2024</p>
                     </div>
                     <div>
                       <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Chili Piper</b> - New York, United States</p>
@@ -451,21 +451,31 @@
                   <button class="next" onclick="nextSlide(this)">&#10095;</button>
               </div>
               <div class="project-content">
-                  <h3 class="project-title">Project Name</h3>
+                  <h3 class="project-title">UMusicStore</h3>
                   <p class="project-description">
-                      A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                    A music-related eCommerce site for shopping, built with Next.js, React.js, Node.js, MongoDB, and GCP, with CI/CD and testing.
                   </p>
-                  <h4 class="project-role">My Role</h4>
-                  <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                  <h4 class="project-role">Full Stack Developer</h4>
+                  <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                    <li>Implemented 80% of backend using Node.js, MongoDB, and GCP.</li>
+                    <li>Developed 90% of frontend with React.js and Tailwind CSS.</li>
+                    <li>Automated 100% of CI/CD pipeline using GitHub Actions and Docker.</li>
+                    <li>Increased 95% test coverage using Jest and Supertest for reliability.</li>
+                    <li>Optimized database queries, reducing response time by 40%.</li>
+                  </ul>
                   <h4 class="project-skills">Skills Used</h4>
                   <div class="skills-list">
                       <span class="skill-box">React.js</span>
+                      <span class="skill-box">Tailwind CSS</span>
                       <span class="skill-box">Node.js</span>
                       <span class="skill-box">MongoDB</span>
-                      <span class="skill-box">AWS</span>
+                      <span class="skill-box">Google Cloud Platform</span>
+                      <span class="skill-box">Github Actions</span>
+                      <span class="skill-box">Jest</span>
+                      <span class="skill-box">Supertest</span>
                   </div>
                   <div class="project-links">
-                    <a href="#" class="project-btn">
+                    <a href="https://www.umusicstore.co.id" class="project-btn" target="_blank">
                         <span class="arrow-icon">&#8599;</span>
                     </a>
                   </div>
@@ -482,21 +492,32 @@
                 <button class="next" onclick="nextSlide(this)">&#10095;</button>
             </div>
             <div class="project-content">
-                <h3 class="project-title">Project Name</h3>
+                <h3 class="project-title">Luminous Labs</h3>
                 <p class="project-description">
-                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                  A healthcare consulting platform with call booking, built using Next.js, Django, FastAPI, PostgreSQL, Redis, and AWS Lambda.
                 </p>
-                <h4 class="project-role">My Role</h4>
-                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                <h4 class="project-role">Full Stack Developer</h4>
+                <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                  <li>Implemented 80% of backend with Django, FastAPI, and PostgreSQL.</li>
+                  <li>Optimized database queries, reducing response time by 40%.</li>
+                  <li>Developed 90% of frontend using Next.js and Tailwind CSS.</li>
+                  <li>Automated 100% of CI/CD pipeline with GitHub Actions, Docker.</li>
+                  <li>Increased test coverage to 95% using Jest for reliability.</li>
+                </ul>
                 <h4 class="project-skills">Skills Used</h4>
                 <div class="skills-list">
-                    <span class="skill-box">React.js</span>
-                    <span class="skill-box">Node.js</span>
-                    <span class="skill-box">MongoDB</span>
-                    <span class="skill-box">AWS</span>
+                    <span class="skill-box">Next.js</span>
+                    <span class="skill-box">Django</span>
+                    <span class="skill-box">FastAPI</span>
+                    <span class="skill-box">PostgreSQL</span>
+                    <span class="skill-box">Redis</span>
+                    <span class="skill-box">AWS Lambda</span>
+                    <span class="skill-box">Docker</span>
+                    <span class="skill-box">Github Actions</span>
+                    <span class="skill-box">Jest</span>
                 </div>
                 <div class="project-links">
-                  <a href="#" class="project-btn">
+                  <a href="https://www.luminouslabs.health" target="_blank" class="project-btn">
                       <span class="arrow-icon">&#8599;</span>
                   </a>
                 </div>
@@ -512,21 +533,31 @@
                 <button class="next" onclick="nextSlide(this)">&#10095;</button>
             </div>
             <div class="project-content">
-                <h3 class="project-title">Project Name</h3>
+                <h3 class="project-title">Nea Placut</h3>
                 <p class="project-description">
-                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                  A fast, secure shopping platform with real-time inventory, seamless checkout, order tracking, and personalized recommendations for a smooth user experience.
                 </p>
-                <h4 class="project-role">My Role</h4>
-                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                <h4 class="project-role">Full Stack Developer</h4>
+                <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                  <li>Implemented 80% of backend using Nest.js, PostgreSQL, and TypeScript.</li>
+                  <li>Developed 90% of frontend with React.js, Vue.js, and Tailwind CSS.</li>
+                  <li>Automated 100% of CI/CD pipeline using Docker and GitHub Actions.</li>
+                  <li>Increased 95% test coverage using Jest, Supertest, and Cypress.</li>
+                  <li>Optimized API performance, reducing response time by 40%.</li>
+                </ul>
                 <h4 class="project-skills">Skills Used</h4>
                 <div class="skills-list">
+                    <span class="skill-box">Nest.js</span>
+                    <span class="skill-box">PostgreSQL</span>
+                    <span class="skill-box">Kubernetes</span>
+                    <span class="skill-box">Jenkins</span>
                     <span class="skill-box">React.js</span>
-                    <span class="skill-box">Node.js</span>
-                    <span class="skill-box">MongoDB</span>
-                    <span class="skill-box">AWS</span>
+                    <span class="skill-box">Supertest</span>
+                    <span class="skill-box">Azure</span>
+                    <span class="skill-box">Cypress</span>
                 </div>
                 <div class="project-links">
-                  <a href="#" class="project-btn">
+                  <a href="https://www.neaplacut.ro" target="_blank" class="project-btn">
                       <span class="arrow-icon">&#8599;</span>
                   </a>
                 </div>
@@ -542,25 +573,35 @@
                 <button class="next" onclick="nextSlide(this)">&#10095;</button>
             </div>
             <div class="project-content">
-                <h3 class="project-title">Project Name</h3>
-                <p class="project-description">
-                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
-                </p>
-                <h4 class="project-role">My Role</h4>
-                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
-                <h4 class="project-skills">Skills Used</h4>
-                <div class="skills-list">
-                    <span class="skill-box">React.js</span>
-                    <span class="skill-box">Node.js</span>
-                    <span class="skill-box">MongoDB</span>
-                    <span class="skill-box">AWS</span>
-                </div>
-                <div class="project-links">
-                  <a href="#" class="project-btn">
-                      <span class="arrow-icon">&#8599;</span>
-                  </a>
-                </div>
-            </div>
+              <h3 class="project-title">EDIT SUITS CO</h3>
+              <p class="project-description">
+                An edit suits service platform built with Vue.js, Flask, MySQL, and Azure, featuring CI/CD, testing, and scalable architecture.
+              </p>
+              <h4 class="project-role">Full Stack Developer</h4>
+              <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                <li>Implemented 80% of backend using Flask, MySQL, and Azure.</li>
+                <li>Optimized database queries, reducing response time by 40%.</li>
+                <li>Developed 90% of frontend using Vue.js with a responsive design.</li>
+                <li>Automated 100% of CI/CD pipeline using Jenkins and Docker.</li>
+                <li>Enhanced platform reliability with 95% test coverage using Python.</li>
+              </ul>
+              <h4 class="project-skills">Skills Used</h4>
+              <div class="skills-list">
+                  <span class="skill-box">Vue.js</span>
+                  <span class="skill-box">Ant Design</span>
+                  <span class="skill-box">Flask</span>
+                  <span class="skill-box">MySQL</span>
+                  <span class="skill-box">Azure</span>
+                  <span class="skill-box">Jenkins</span>
+                  <span class="skill-box">Python</span>
+                  <span class="skill-box">Node.js</span>
+              </div>
+              <div class="project-links">
+                <a href="https://www.editsuits.com" target="_blank" class="project-btn">
+                    <span class="arrow-icon">&#8599;</span>
+                </a>
+              </div>
+          </div>
           </div>
           <div class="project-card">
             <div class="image-slider">
@@ -573,21 +614,34 @@
                 <button class="next" onclick="nextSlide(this)">&#10095;</button>
             </div>
             <div class="project-content">
-                <h3 class="project-title">Project Name</h3>
+                <h3 class="project-title">SKYLLER</h3>
                 <p class="project-description">
-                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                  A resource platform offering tools, guides, real-time updates, secure data handling, API integrations, and automated workflows for enhanced productivity.
                 </p>
-                <h4 class="project-role">My Role</h4>
-                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                <h4 class="project-role">Backend & DevOps Developer</h4>
+                <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                  <li>Implemented 80% of backend using ASP.NET, C#, and SQL Server.</li>
+                  <li>Developed secure and scalable APIs with Entity Framework and .NET Core.</li>
+                  <li>Automated 100% of CI/CD pipeline using Docker and Azure DevOps.</li>
+                  <li>Increased 95% test coverage using xUnit, NUnit, and Moq.</li>
+                  <li>Optimized database queries, reducing API response time by 40%.</li>
+                </ul>
                 <h4 class="project-skills">Skills Used</h4>
                 <div class="skills-list">
-                    <span class="skill-box">React.js</span>
-                    <span class="skill-box">Node.js</span>
-                    <span class="skill-box">MongoDB</span>
+                    <span class="skill-box">ASP.net</span>
+                    <span class="skill-box">C#</span>
+                    <span class="skill-box">Entity Framework</span>
+                    <span class="skill-box">SQL Server</span>
+                    <span class="skill-box">Docker</span>
+                    <span class="skill-box">GitHub Actions</span>
                     <span class="skill-box">AWS</span>
+                    <span class="skill-box">NUnit</span>
+                    <span class="skill-box">Moq</span>
+                    <span class="skill-box">Redis</span>
+                    <span class="skill-box">API Gateway</span>
                 </div>
                 <div class="project-links">
-                  <a href="#" class="project-btn">
+                  <a href="https://www.skyller.co" target="_blank" class="project-btn">
                       <span class="arrow-icon">&#8599;</span>
                   </a>
                 </div>
@@ -601,21 +655,32 @@
               </video>
             </div>
             <div class="project-content">
-                <h3 class="project-title">Project Name</h3>
+                <h3 class="project-title">HPS TRADE CO</h3>
                 <p class="project-description">
-                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                  A platform for businesses to create targeted ads, track performance, optimize engagement, and integrate seamlessly with social media.
                 </p>
-                <h4 class="project-role">My Role</h4>
-                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                <h4 class="project-role">Front End Developer</h4>
+                <ul style="list-style-type: circle; padding-left: 20px;" class="role-description">
+                  <li>Developed 90% of frontend using React.js, Vue.js, and Tailwind CSS.</li>
+                  <li>Optimized UI performance, reducing load time by 40%.</li>
+                  <li>Implemented responsive and accessible design for seamless user experience.</li>
+                  <li>Integrated REST & GraphQL APIs for dynamic data handling.</li>
+                  <li>Automated testing and deployment using Jest, Cypress, and GitHub Actions.</li>
+                </ul>
                 <h4 class="project-skills">Skills Used</h4>
                 <div class="skills-list">
                     <span class="skill-box">React.js</span>
-                    <span class="skill-box">Node.js</span>
-                    <span class="skill-box">MongoDB</span>
-                    <span class="skill-box">AWS</span>
+                    <span class="skill-box">Bootstrap</span>
+                    <span class="skill-box">SCSS</span>
+                    <span class="skill-box">Redux</span>
+                    <span class="skill-box">Zustand</span>
+                    <span class="skill-box">Code Splitting</span>
+                    <span class="skill-box">Jest</span>
+                    <span class="skill-box">GitHub Action</span>
+                    <span class="skill-box">Cypress</span>
                 </div>
                 <div class="project-links">
-                  <a href="#" class="project-btn">
+                  <a href="https://www.hps-trade.co.th" target="_blank" class="project-btn">
                       <span class="arrow-icon">&#8599;</span>
                   </a>
                 </div>
